--- a/ionic/www/templates/menu.html
+++ b/ionic/www/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-dark">
       <ion-nav-back-button></ion-nav-back-button>
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
@@ -9,18 +9,16 @@
     <ion-nav-view name="side-menu21"></ion-nav-view>
   </ion-side-menu-content>
   <ion-side-menu side="left" id="side-menu21">
-    <ion-header-bar class="bar-stable">
+    <ion-header-bar class="bar-dark">
       <div class="title">Menu</div>
     </ion-header-bar>
-    <ion-content padding="false" class="side-menu-left has-header">
-      <ion-list>
-        <ion-item ui-sref="menu.home" menu-close="">Home</ion-item>
-        <ion-item ui-sref="menu.firebase" menu-close="">Firebase Setup</ion-item>
-        <ion-item ui-sref="menu.node" menu-close="">Node Setup</ion-item>
-        <ion-item ui-sref="menu.radio" menu-close="">Radio Setup</ion-item>
-        <ion-item ui-sref="menu.chart" menu-close="">Chart</ion-item>
-        <ion-item ui-sref="menu.logger" menu-close="">Log History</ion-item>
-      </ion-list>
+    <ion-content class="custom" padding="false" class="side-menu-left has-header">
+      <ion-item ui-sref="menu.home" menu-close="">Home</ion-item>
+      <ion-item ui-sref="menu.firebase" menu-close="">Firebase Setup</ion-item>
+      <ion-item ui-sref="menu.node" menu-close="">Node Setup</ion-item>
+      <ion-item ui-sref="menu.radio" menu-close="">Radio Setup</ion-item>
+      <ion-item ui-sref="menu.chart" menu-close="">Chart</ion-item>
+      <ion-item ui-sref="menu.logger" menu-close="">Log History</ion-item>
     </ion-content>
   </ion-side-menu>
 </ion-side-menus>
