ionic style changes

--- a/ionic/www/templates/radio.html
+++ b/ionic/www/templates/radio.html
@@ -1,7 +1,7 @@
 <ion-view title="Radio Setup" id="page6">
   <ion-content class="custom" padding="true" scroll="true" class="has-header">
     <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
-    <ion-toggle toggle-class="toggle-dark" ng-model="pushCtrl0.checked" ng-change="pushCtrl0Change()">
+    <ion-toggle toggle-class="toggle-positive" ng-model="pushCtrl0.checked" ng-change="pushCtrl0Change()">
       Enable Radio Codes Learning
     </ion-toggle>
     <div class="list card">
