--- a/ionic/www/templates/home.html
+++ b/ionic/www/templates/home.html
@@ -1,6 +1,7 @@
 <ion-view title="Home" id="page1">
   <ion-content class="custom" padding="true" scroll="true" class="has-header">
     <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
+    <ion-checkbox class="item-checkbox-right" ng-model="system.status">system.status</ion-checkbox>
     <ion-toggle toggle-class="toggle-positive" ng-model="control.alarm" ng-change="pushCtrl0Change()">
       Enable Alarm
     </ion-toggle>
@@ -16,7 +17,6 @@
     <ion-checkbox class="item-checkbox-right" ng-model="status.alarm">status.alarm</ion-checkbox>
     <a class="item">status.bootcnt<span class="item-note">{{status.bootcnt}}</span>
     <a class="item">status.upcnt<span class="item-note">{{status.upcnt}}</span></a>
-    <a class="item">status.time<span class="item-note">{{status.time}}</span></a>
     <a class="item">status.heap<span class="item-note">{{status.heap}}</span></a>
     <a class="item">status.temperature<span class="item-note">{{status.temperature/10}}</span></a>
     <a class="item">status.humidity<span class="item-note">{{status.humidity/10}}</span></a>
