refactor + better datetime management

--- a/ionic/www/templates/History.html
+++ b/ionic/www/templates/History.html
@@ -1,4 +1,4 @@
-<ion-view title="Log History" id="page4">
+<ion-view title="Log History" id="History">
   <ion-content class="custom" padding="true" scroll="true" class="has-header">
     <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
     <p style="white-space: pre;text-align:left;">{{logsText}}</p>
