--- a/ionic/www/templates/NodeSetup.html
+++ b/ionic/www/templates/NodeSetup.html
@@ -1,4 +1,4 @@
-<ion-view title="Node Setup" id="page2">
+<ion-view title="Node Setup" id="NodeSetup">
   <ion-content class="custom" padding="true" scroll="true" class="has-header">
     <a class="item">Connection<span class="item-note">{{WSStatus}} -> {{StsTxt}}</span></a>
     <button id="setup-connect" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-social-rss" on-touch="SetupComCmd()">
