--- a/ionic/www/templates/chart.html
+++ b/ionic/www/templates/chart.html
@@ -1,4 +1,4 @@
-<ion-view title="Chart" id="page3">
+<ion-view title="Chart" id="chart">
   <ion-content padding="true" scroll="true" class="has-header">
     <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
     <div class="chart-line">
