--- a/ionic/www/templates/menu.html
+++ b/ionic/www/templates/menu.html
@@ -13,12 +13,13 @@
       <div class="title">Menu</div>
     </ion-header-bar>
     <ion-content class="custom" padding="false" class="side-menu-left has-header">
-      <ion-item ui-sref="menu.home" menu-close="">Home</ion-item>
-      <ion-item ui-sref="menu.firebase" menu-close="">Firebase Setup</ion-item>
-      <ion-item ui-sref="menu.node" menu-close="">Node Setup</ion-item>
-      <ion-item ui-sref="menu.radio" menu-close="">Radio Setup</ion-item>
+      <ion-item ui-sref="menu.Home" menu-close="">Home</ion-item>
+      <ion-item ui-sref="menu.NodeInfo" menu-close="">Node Info</ion-item>
+      <ion-item ui-sref="menu.FirebaseSetup" menu-close="">Firebase Setup</ion-item>
+      <ion-item ui-sref="menu.NodeSetup" menu-close="">Node Setup</ion-item>
+      <ion-item ui-sref="menu.RadioSetup" menu-close="">Radio Setup</ion-item>
       <ion-item ui-sref="menu.chart" menu-close="">Chart</ion-item>
-      <ion-item ui-sref="menu.logger" menu-close="">Log History</ion-item>
+      <ion-item ui-sref="menu.History" menu-close="">Log History</ion-item>
     </ion-content>
   </ion-side-menu>
 </ion-side-menus>
