--- a/ionic/www/templates/home.html
+++ b/ionic/www/templates/home.html
@@ -1,4 +1,4 @@
-<ion-view title="Home" id="page1">
+<ion-view title="Home" id="Home">
   <ion-content class="custom" padding="true" scroll="true" class="has-header">
     <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
     <ion-checkbox class="item-checkbox-right" ng-model="system.status">system.status</ion-checkbox>
@@ -15,9 +15,6 @@
       Request Reboot
     </ion-toggle>
     <ion-checkbox class="item-checkbox-right" ng-model="status.alarm">status.alarm</ion-checkbox>
-    <a class="item">status.bootcnt<span class="item-note">{{status.bootcnt}}</span>
-    <a class="item">status.upcnt<span class="item-note">{{status.upcnt}}</span></a>
-    <a class="item">status.heap<span class="item-note">{{status.heap}}</span></a>
     <a class="item">status.temperature<span class="item-note">{{status.temperature/10}}</span></a>
     <a class="item">status.humidity<span class="item-note">{{status.humidity/10}}</span></a>
   </ion-content>
