--- a/ionic/www/templates/home.html
+++ b/ionic/www/templates/home.html
@@ -1,4 +1,4 @@
-<ion-view title="Home" id="Home">
+<ion-view title="Home" id="page1">
   <ion-content class="custom" padding="true" scroll="true" class="has-header">
     <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
     <ion-checkbox class="item-checkbox-right" ng-model="system.status">system.status</ion-checkbox>
