--- a/ionic/www/templates/menu.html
+++ b/ionic/www/templates/menu.html
@@ -13,7 +13,7 @@
       <div class="title">Menu</div>
     </ion-header-bar>
     <ion-content class="custom" padding="false" class="side-menu-left has-header">
-      <ion-item ui-sref="menu.Home" menu-close="">Home</ion-item>
+      <ion-item ui-sref="menu.home" menu-close="">Home</ion-item>
       <ion-item ui-sref="menu.NodeInfo" menu-close="">Node Info</ion-item>
       <ion-item ui-sref="menu.FirebaseSetup" menu-close="">Firebase Setup</ion-item>
       <ion-item ui-sref="menu.NodeSetup" menu-close="">Node Setup</ion-item>
