refactor simplified ionic interface

--- a/ionic/www/templates/NodeInfo.html
+++ b/ionic/www/templates/NodeInfo.html
@@ -1,9 +1,17 @@
 <ion-view title="Node Info" id="page7">
   <ion-content class="custom" padding="true" scroll="true" class="has-header">
     <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
-    <ion-checkbox class="item-checkbox-right" ng-model="system.status">system.status</ion-checkbox>
+    <ion-checkbox class="item-checkbox-right" ng-model="system.status">System Status Up</ion-checkbox>
+    <ion-toggle toggle-class="toggle-positive" ng-model="control.led" ng-change="pushCtrl1Change()">
+      Wake Up On LAN
+    </ion-toggle>
+    <ion-toggle toggle-class="toggle-positive" ng-model="control.monitor" ng-change="pushCtrl3Change()">
+      Enable Monitoring
+    </ion-toggle>
+    <ion-toggle toggle-class="toggle-positive" ng-model="control.reboot" ng-change="pushCtrl2Change()">
+      Request Reboot
+    </ion-toggle>
     <a class="item">status.bootcnt<span class="item-note">{{status.bootcnt}}</span>
-    <a class="item">status.upcnt<span class="item-note">{{status.upcnt}}</span></a>
     <a class="item">status.heap<span class="item-note">{{status.heap}}</span></a>
   </ion-content>
 </ion-view>
