--- a/ionic/www/templates/NodeInfo.html
+++ b/ionic/www/templates/NodeInfo.html
@@ -2,6 +2,7 @@
   <ion-content class="custom" padding="true" scroll="true" class="has-header">
     <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
     <a class="item">Last Startup time<span class="item-note">{{StartupTime}}</span></a>
+    <a class="item">Last Hearth time<span class="item-note">{{HeartTime}}</span></a>
     <ion-checkbox class="item-checkbox-right" ng-model="system.status">System Status Up</ion-checkbox>
     <ion-toggle toggle-class="toggle-positive" ng-model="control.led" ng-change="pushCtrl1Change()">
       Wake Up On LAN
