--- a/ionic/www/templates/chart.html
+++ b/ionic/www/templates/chart.html
@@ -1,14 +1,23 @@
 <ion-view title="Chart" id="page3">
   <ion-content padding="true" scroll="true" class="has-header">
     <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
-    <div class="chart-line">
-      <canvas id="myChart" class="chart chart-line" chart-data="JsonTH.data" chart-labels="JsonTH.labels" chart-series="JsonTH.series" chart-options="JsonTH.options" chart-dataset-override="JsonTH.datasetOverride" chart-click="onClick" </canvas>
+    <button id="clear-chart" style="text-align:left;" class="button button-clear button-dark button-block icon-right ion-trash-b" on-touch="ClearChart()">
+      Clear Chart
+    </button>
+    <div class="list card">
+      <div class="chart-line">
+        <canvas id="myChart" class="chart chart-line" chart-data="JsonTH.data" chart-labels="JsonTH.labels" chart-series="JsonTH.series" chart-options="JsonTH.options" chart-dataset-override="JsonTH.datasetOverride" chart-click="onClick" </canvas>
+      </div>
     </div>
-    <div class="chart-radar">
-      <canvas id="myChart" class="chart chart-radar" chart-data="JsonT.data" chart-labels="JsonTH.labels" </canvas>
+    <div class="list card">
+      <div class="chart-radar">
+        <canvas id="myChart" class="chart chart-radar" chart-data="JsonT.data" chart-labels="JsonTH.labels" </canvas>
+      </div>
     </div>
-    <div class="chart-radar">
-      <canvas id="myChart" class="chart chart-radar" chart-data="JsonH.data" chart-labels="JsonTH.labels" </canvas>
+    <div class="list card">
+      <div class="chart-radar">
+        <canvas id="myChart" class="chart chart-radar" chart-data="JsonH.data" chart-labels="JsonTH.labels" </canvas>
+      </div>
     </div>
   </ion-content>
 </ion-view>
