fix firebase finger

--- a/ionic/www/templates/RadioSetup.html
+++ b/ionic/www/templates/RadioSetup.html
@@ -37,5 +37,8 @@
     <button id="setup-update" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-android-upload" on-touch="SetupRadio()">
       Update Radio Codes Configuration
     </button>
+    <button id="setup-clear" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-trash-b" on-touch="ResetRadioCodes()">
+      Reset Radio Codes
+    </button>
   </ion-content>
 </ion-view>
