--- a/ionic/www/templates/FirebaseSetup.html
+++ b/ionic/www/templates/FirebaseSetup.html
@@ -1,18 +1,15 @@
 <ion-view title="Firebase Setup" id="page5">
   <ion-content class="custom" padding="true" scroll="false" class="has-header">
-    <button id="setup-configure-node" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-android-settings" on-touch="showPopupFbConfig()">
+    <button id="setup-configure-node" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-android-settings" on-hold="showPopupFbConfig()">
       Firebase Configuration
     </button>
-    <button id="setup-configure-node" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-android-settings" on-touch="showPopupLogin()">
+    <button id="setup-configure-node" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-android-settings" on-hold="showPopupLogin()">
       Firebase Login
     </button>
-    <button id="setup-configure-node" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-android-settings" on-touch="showPopupFbAdminSecrets()">
-      Firebase Admin Secrets
-    </button>
-    <button id="setup-update" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-trash-b" on-touch="ResetFirebase()">
+    <button id="setup-update" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-trash-b" on-hold="ResetFirebase()">
       Reset Configuration
     </button>
-    <button id="setup-update" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-android-upload" on-touch="InitFirebase()">
+    <button id="setup-update" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-android-upload" on-hold="InitFirebase()">
       Init Firebase Database
     </button>
   </ion-content>
