--- a/ionic/www/templates/RadioSetup.html
+++ b/ionic/www/templates/RadioSetup.html
@@ -9,35 +9,53 @@
       <ion-list can-swipe="true">
         <ion-item ng-repeat="RadioCode in InactiveRadioCodes">
           <i class="icon ion-wifi"></i>
-          <ion-option-button class="button-light icon-left ion-social-rss" ng-click="ActivateRadioCode($index)">
-            Activate
-          </ion-option-button>
-          <ion-option-button class="button-dark icon-left ion-trash-b" ng-click="RemoveInactiveRadioCode($index)">
+          <ion-option-button class="button-dark icon-left ion-trash-b" ng-hold="RemoveInactiveRadioCode($index)">
             Remove
+          </ion-option-button>
+          <ion-option-button class="button-light icon-left ion-social-rss" ng-hold="ActivateRadioCodeTx($index)">
+            Activate Tx
+          </ion-option-button>
+          <ion-option-button class="button-light icon-left ion-social-rss" ng-hold="ActivateRadioCode($index)">
+            Activate Rx
           </ion-option-button>
           {{RadioCode.val().toString(16).toUpperCase()}}
         </ion-item>
       </ion-list>
     </div>
     <div class="list card">
-      <div class="item item-divider">Active Radio Codes</div>
+      <div class="item item-divider">Active Radio Codes Rx</div>
       <ion-list <ion-list can-swipe="true">
         <ion-item ng-repeat="RadioCode in ActiveRadioCodes">
           <i class="icon ion-wifi"></i>
-          <ion-option-button class="button-light icon-left ion-social-rss-outline" ng-click="DeactivateRadioCode($index)">
-            Deactivate
-          </ion-option-button>
-          <ion-option-button class="button-dark icon-left ion-trash-b" ng-click="RemoveActiveRadioCode($index)">
+          <ion-option-button class="button-dark icon-left ion-trash-b" ng-hold="RemoveActiveRadioCode($index)">
             Remove
+          </ion-option-button>
+          <ion-option-button class="button-light icon-left ion-social-rss-outline" ng-hold="DeactivateRadioCode($index)">
+            Deactivate
           </ion-option-button>
           {{RadioCode.val().toString(16).toUpperCase()}}
         </ion-item>
       </ion-list>
     </div>
-    <button id="setup-update" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-android-upload" on-touch="SetupRadio()">
+    <div class="list card">
+      <div class="item item-divider">Active Radio Codes Tx</div>
+      <ion-list <ion-list can-swipe="true">
+        <ion-item ng-repeat="RadioCode in ActiveRadioCodesTx">
+          <i class="icon ion-wifi"></i>
+          <ion-option-button class="button-dark icon-left ion-trash-b" ng-hold="RemoveActiveRadioCodeTx($index)">
+            Remove
+          </ion-option-button>
+          <ion-option-button class="button-light icon-left ion-social-rss-outline" ng-hold="DeactivateRadioCodeTx($index)">
+            Deactivate
+          </ion-option-button>
+          {{RadioCode.val().toString(16).toUpperCase()}}
+        </ion-item>
+      </ion-list>
+    </div>
+    <button id="setup-update" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-android-upload" on-hold="SetupRadio()">
       Update Radio Codes Configuration
     </button>
-    <button id="setup-clear" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-trash-b" on-touch="ResetRadioCodes()">
+    <button id="setup-clear" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-trash-b" on-hold="ResetRadioCodes()">
       Reset Radio Codes
     </button>
   </ion-content>
