--- a/ionic/www/templates/NodeSetup.html
+++ b/ionic/www/templates/NodeSetup.html
@@ -4,7 +4,7 @@
     <button id="setup-connect" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-social-rss" on-hold="SetupComCmd()">
       {{ComButton}}
     </button>
-    <button id="setup-configure-node" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-android-arrow-dropright" on-hold="showPopup()">
+    <button id="setup-configure-node" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-android-settings" on-hold="showPopup()">
       Node Configuration
     </button>
     <button id="setup-update-node" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-android-upload" on-hold="SetupComSend(settings)">
