--- a/ionic/www/templates/menu.html
+++ b/ionic/www/templates/menu.html
@@ -19,6 +19,7 @@
       <ion-item ui-sref="menu.NodeSetup" menu-close="">Node Setup</ion-item>
       <ion-item ui-sref="menu.RadioSetup" menu-close="">Radio Setup</ion-item>
       <ion-item ui-sref="menu.TimerSetup" menu-close="">Timer Setup</ion-item>
+      <ion-item ui-sref="menu.DioSetup" menu-close="">Dio Setup</ion-item>
       <ion-item ui-sref="menu.chart" menu-close="">Chart</ion-item>
       <ion-item ui-sref="menu.History" menu-close="">Log History</ion-item>
     </ion-content>
