--- a/ionic/www/templates/NodeInfo.html
+++ b/ionic/www/templates/NodeInfo.html
@@ -4,7 +4,7 @@
     <a class="item">Last Startup time<span class="item-note">{{StartupTime}}</span></a>
     <a class="item">Last Hearth time<span class="item-note">{{HeartTime}}</span></a>
     <ion-checkbox class="item-checkbox-right" ng-model="system.status">System Status Up</ion-checkbox>
-    <ion-toggle toggle-class="toggle-positive" ng-model="control.led" ng-change="pushCtrl1Change()">
+    <ion-toggle toggle-class="toggle-positive" ng-model="control.wol" ng-change="pushCtrl1Change()">
       Wake Up On LAN
     </ion-toggle>
     <ion-toggle toggle-class="toggle-positive" ng-model="control.monitor" ng-change="pushCtrl3Change()">
