--- a/ionic/www/templates/chart.html
+++ b/ionic/www/templates/chart.html
@@ -6,7 +6,14 @@
     </button>
     <div class="list card">
       <div class="chart-line">
-        <canvas id="myChart" class="chart chart-line" chart-data="JsonTH.data" chart-labels="JsonTH.labels" chart-series="JsonTH.series" chart-options="JsonTH.options" chart-dataset-override="JsonTH.datasetOverride" chart-click="onClick" </canvas>
+        <canvas class="chart chart-line" chart-data="JsonT.data" chart-series="JsonT.series" chart-options="JsonT.options">
+        </canvas>
+      </div>
+    </div>
+    <div class="list card">
+      <div class="chart-line">
+        <canvas class="chart chart-line" chart-data="JsonH.data" chart-series="JsonH.series" chart-options="JsonH.options">
+        </canvas>
       </div>
     </div>
   </ion-content>
