--- a/ionic/www/templates/DigitalIOSetup.html
+++ b/ionic/www/templates/DigitalIOSetup.html
@@ -2,7 +2,7 @@
   <ion-content class="custom" padding="true" scroll="true" class="has-header">
     <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
     <button id="Add timer" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-plus" on-hold="showPopupDoutAdd()">
-      Add Dout
+      Add Digital OUT
     </button>
     <div class="list card">
       <div class="item item-divider">Dout</div>
@@ -20,10 +20,10 @@
       </ion-list>
     </div>
     <button id="setup-update" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-android-upload" on-hold="SetupDIO()">
-      Update Dio Configuration
+      Update Digital IO Configuration
     </button>
     <button id="setup-clear" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-trash-b" on-hold="ResetDIO()">
-      Reset Dio
+      Reset Digital IO Configuration
     </button>
   </ion-content>
 </ion-view>
