--- a/ionic/www/templates/menu.html
+++ b/ionic/www/templates/menu.html
@@ -21,6 +21,7 @@
       <ion-item ui-sref="menu.TimerSetup" menu-close="">Timer Setup</ion-item>
       <ion-item ui-sref="menu.DigitalIOSetup" menu-close="">DigitalIO Setup</ion-item>
       <ion-item ui-sref="menu.LogicalIOSetup" menu-close="">LogicalIO Setup</ion-item>
+      <ion-item ui-sref="menu.FunctionSetup" menu-close="">Function Setup</ion-item>
       <ion-item ui-sref="menu.chart" menu-close="">Chart</ion-item>
       <ion-item ui-sref="menu.History" menu-close="">Log History</ion-item>
     </ion-content>
