--- a/ionic/www/templates/home.html
+++ b/ionic/www/templates/home.html
@@ -1,5 +1,8 @@
 <ion-view title="Home" id="page1">
   <ion-content class="custom" padding="true" scroll="true" class="has-header">
+    <div class="spin">
+      <ion-spinner ng-show="loading" class="spinner-assertive"></ion-spinner>
+    </div>
     <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
     <ion-checkbox class="item-checkbox-right" ng-model="system.status">System Status Up</ion-checkbox>
     <ion-toggle toggle-class="toggle-positive" ng-model="control.alarm" ng-change="pushCtrl0Change()">
