FOTA support over Firebase storage

--- a/ionic/www/templates/FirebaseSetup.html
+++ b/ionic/www/templates/FirebaseSetup.html
@@ -1,5 +1,6 @@
 <ion-view title="Firebase Setup" id="page5">
   <ion-content class="custom" padding="true" scroll="false" class="has-header">
+    <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
     <button id="setup-configure-node" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-android-settings" on-hold="showPopupLogin()">
       Firebase Login
     </button>
