--- a/ionic/www/templates/NodeSetup.html
+++ b/ionic/www/templates/NodeSetup.html
@@ -1,5 +1,6 @@
 <ion-view title="Node Setup" id="page2">
   <ion-content class="custom" padding="true" scroll="true" class="has-header">
+    <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
     <a class="item">Connection<span class="item-note">{{WSStatus}} -> {{StsTxt}}</span></a>
     <button id="setup-connect" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-social-rss" on-hold="SetupComCmd()">
       {{ComButton}}
@@ -10,6 +11,5 @@
     <button id="setup-update-node" style="text-align:left;" class="button button-clear button-light button-block icon-right ion-android-upload" on-hold="SetupComSend(settings)">
       Store to Node
     </button>
-    <ion-infinite-scroll on-infinite="doRefresh()"></ion-infinite-scroll>
   </ion-content>
 </ion-view>
